--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item">
                           <a id="classes_view" class="nav-link" href="#">ClassBase API View</a>
                         </li>
-                            
+
                       </ul>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalLogin">
                             Login
@@ -133,7 +133,7 @@
                     </div>
                     <div class="form-group">
                         <label for="email">Họ</label>
-                        <input type="text" class="form-control" id="email" name="email">
+                        <input type="email" class="form-control" id="email" name="email">
                     </div>
                 </div>
                 <div class="modal-footer">
